# Meeting_Scheduler_with_Django_and_React

./: .gitattributes  .gitignore  README.md  example_tables.txt  nginx.conf  pyproject.toml
meeting/React/: .babelrc  package-lock.json  package.json  webpack.config.js
meeting/React/src/app/: app.js
meeting/React/src/app/components/: ListClasses.js  ScheduleClasses.js  UploadUserInfo.js  header.js  home.js  loginForm.js  signUpForm.js  userPage.js
meeting/React/src/app/components/styles/: userPage.scss
meeting/React/src/app/components/validations/: signup.js
meeting/React/src/app/utils/: axiosPrivate.js  refreshToken.js
meeting/frontend/: urls.py
meeting/frontend/static/js/: bundle.js.backup.20240729  bundle.js.map.backup.20240729
meeting/frontend/templates/frontend/: index.html  index.html.backup.20240729
meeting/meeting/: settings.py  urls.py
meeting/scheduler/: models.py  serializers.py  urls.py  views.py
meeting/scheduler/__pycache__/: views.cpython-310.pyc.backup.20240729
meeting/scheduler/migrations/: 0001_initial.py  0002_authgroup_authgrouppermissions_authpermission_and_more.py  0003_photos.py  0004_alter_photos_selectedphotofile.py
meeting/scheduler/selfIntros/: bill.txt  peg.txt
meeting_scheduler/meeting/frontend/static/js/: bundle.js  bundle.js.map
